--- a/style.css
+++ b/style.css
@@ -1,24 +1,29 @@
 .hero-section {
+  background-color: whitesmoke;
+  padding: 59px;
   text-align: center;
-  padding: 60px 10px;
-  background-color: #f8f9fa;
+  line-height: 1.9rem;
+}
+
+.hero-section p,
+.about-section p,
+.about-section h2,
+.contact-div,
+.social-section div {
+  padding: 0 9%;
 }
 
 .about-section {
-  padding: 60px 20px;
-}
-
-.section {
-  padding: 60px 20px;
-  background-color: #f8f9fa;
+  background-color: white;
+  padding: 59px;
+  line-height: 1.9rem;
 }
 
 .contact-section {
-  background-color: white !important;
+  background-color: whitesmoke;
+  padding: 59px;
 }
-.contact-section form .form-group {
-  margin-bottom: 1.2rem;
-}
-.contact-section textarea {
-  resize: vertical;
+
+.social-section {
+  padding: 59px;
 }
